# HW6AOPL

./: TS JS AI Usage Report.md  dune  hw3.ml  json_parsing.ml  json_parsing_test.ml
_build/: .db  .digest-db  trace.csexp
_build/default/: hw3.ml  json.cma  json.cmxa  json.cmxs  json_structures.cma  json_structures.cmxa  json_structures.cmxs
_build/default/.hw3.objs/byte/: hw3.cmt
_build/default/.json.objs/byte/: json.cmi  json.cmo  json.cmt
_build/default/.json.objs/native/: json.cmx
_build/default/.json_parsing_test.eobjs/: dune__exe__Json_parsing_test.impl.d
_build/default/.json_structures.objs/byte/: json_structures.cmi  json_structures.cmo  json_structures.cmt  json_structures__Parsed_complete_bus.cmi  json_structures__Parsed_complete_bus.cmo  json_structures__Parsed_complete_bus.cmt  json_structures__Parsed_medium_bus.cmi  json_structures__Parsed_medium_bus.cmo  json_structures__Parsed_medium_bus.cmt  json_structures__Parsed_small_bus.cmi  json_structures__Parsed_small_bus.cmo  json_structures__Parsed_small_bus.cmt
_build/default/.json_structures.objs/native/: json_structures.cmx  json_structures__Parsed_complete_bus.cmx  json_structures__Parsed_medium_bus.cmx  json_structures__Parsed_small_bus.cmx
_build/default/.merlin-conf/: exe-json_parsing_test  lib-hw3  lib-json  lib-json_structures
